--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -9,14 +10,14 @@
 
 
 .App-header {
-  background-color: #343943;
+  background-color: #fafafa;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  
 }
 
 .App-link {
@@ -32,31 +33,83 @@
   }
 }
 
+nav {
+  background-color: #023166;
+  display: flex;
+  flex-direction:row;
+  justify-content: space-between;
+  align-items: center;
+  padding: .5rem 1.5rem .5rem;
+  /* margin: 0 2rem 1rem; */
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  
+}
+
+nav img {
+  max-width: 5rem;
+  max-height: 5rem;
+
+}
+
+nav a {
+  text-decoration: none;
+  color: white;
+}
+
+
+
 .Counter {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content:flex-start;
+  justify-content: center;
   margin: 2rem;
   padding: 2rem;
-  border: 1px solid blue
+  color: black;
+  /* border: 1px solid blue */
 }
 
 .Counter button {
   color: white;
-  background-color: black;
+  background-color: #007BFF;
+  border: #007BFF;
   min-height: 2.5rem;
   min-width: 6rem;
   max-height: 2rem;
   max-width: 6rem;
   font-size: 1rem;
-  border-radius: 6px;
+  border-radius: 4px;
+}
+
+.Counter button:hover {
+  color: white;
+  background-color: #93C5FD;
+  border: #007BFF;
+    min-height: 2.5rem;
+    min-width: 6rem;
+    max-height: 2rem;
+    max-width: 6rem;
+    font-size: 1rem;
+    border-radius: 4px;
 }
 
 .Counter-items {
-  margin: 2rem
+  margin: 10px 30px 8px 30px;
 }
 
 img {
+  max-width: 10rem;
+}
+
+.Star-div {
+  /* border: 1px solid black; */
+  min-height: 5rem;
+  min-width: 30rem;
+  max-height: 5rem;
   max-width: 30rem;
+  margin: 1rem;
+  padding: 1rem;
 }
