--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
-  
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-around;
 }
+
 
 .App-logo {
   height: 40vmin;
@@ -11,13 +15,22 @@
 
 .App-header {
   background-color: #fafafa;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  
+}
+
+.App-footer {
+  background-color: #002855;
+  color: white;
+  padding: 1rem;
+  border-top: 4px solid #FFA500;
+  position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .App-link {
@@ -34,7 +47,7 @@
 }
 
 nav {
-  background-color: #023166;
+  background-color: #002855;
   display: flex;
   flex-direction:row;
   justify-content: space-between;
