--- a/src/App.css
+++ b/src/App.css
@@ -16,16 +16,6 @@
   font-size: calc(10px + 2vmin);
 }
 
-.App-footer {
-  background-color: #002855;
-  color: white;
-  padding: 1rem;
-  border-top: 15px solid #FFA500;
-  position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
 
 .App-link {
   color: #61dafb;
@@ -43,7 +33,7 @@
 @keyframes logo-img-spin {
   from {
     transform: rotate(0deg);
-
+    
   }
   to {
     transform: rotate(360deg)
@@ -53,7 +43,7 @@
 nav {
   background-color: #002855;
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: .5rem 1.5rem .5rem;
@@ -62,7 +52,7 @@ nav {
   top: 0;
   left: 0;
   right: 0;
-  
+
 }
 
 nav img {
@@ -78,14 +68,14 @@ nav a {
 
 nav button {
   color: white;
-    background-color: #002855;
-    border: #002855;
-    min-height: 2.5rem;
-    min-width: 6rem;
-    max-height: 2rem;
-    max-width: 6rem;
-    font-size: 1rem;
-    border-radius: 4px;
+  background-color: #002855;
+  border: #002855;
+  min-height: 2.5rem;
+  min-width: 6rem;
+  max-height: 2rem;
+  max-width: 6rem;
+  font-size: 1rem;
+  border-radius: 4px;
 }
 
 .dropdown {
@@ -94,10 +84,10 @@ nav button {
 
   top: 100%;
   /* transform: translate(-50%); */
-  background-color: white;
+  background-color: #FFA500;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 8px;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   z-index: 1;
   left: 80%;
   /* width: calc(100vw -50%); */
@@ -114,7 +104,9 @@ nav button {
 
 .dropdown a:hover {
   background-color: #f1f1f1;
+  border-radius: 4px;
 }
+
 .Counter {
   display: flex;
   flex-direction: row;
@@ -142,12 +134,12 @@ nav button {
   color: white;
   background-color: #93C5FD;
   border: #007BFF;
-    min-height: 2.5rem;
-    min-width: 6rem;
-    max-height: 2rem;
-    max-width: 6rem;
-    font-size: 1rem;
-    border-radius: 4px;
+  min-height: 2.5rem;
+  min-width: 6rem;
+  max-height: 2rem;
+  max-width: 6rem;
+  font-size: 1rem;
+  border-radius: 4px;
 }
 
 .Counter-items {
@@ -159,8 +151,23 @@ nav button {
   padding: 50px;
 }
 
-img {
-  max-width: 10rem;
+.show-couples {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem;
+}
+
+.user-result {
+  flex: 1;
+  text-align: center;
+  padding: 0 1rem;
+}
+
+.show-couples button {
+  flex: 1;
+  max-width: 150px;
+  margin: 0 1rem;
 }
 
 .Star-div {
@@ -171,4 +178,15 @@ img {
   max-width: 30rem;
   margin: 1rem;
   padding: 1rem;
+}
+
+.App-footer {
+  background-color: #002855;
+  color: white;
+  padding: 1rem;
+  border-top: 15px solid #FFA500;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
