--- a/src/App.css
+++ b/src/App.css
@@ -168,6 +168,27 @@ nav button {
   flex: 1;
   max-width: 150px;
   margin: 0 1rem;
+  color: white;
+  background-color: #007BFF;
+  border: #007BFF;
+  min-height: 3.5rem;
+  min-width: 6rem;
+  max-height: 3.5rem;
+  max-width: 6rem;
+  font-size: 1rem;
+  border-radius: 4px;
+}
+
+.show-couples button:hover {
+  color: white;
+    background-color: #93C5FD;
+    border: #007BFF;
+    min-height: 3.5rem;
+    min-width: 6rem;
+    max-height: 3.5rem;
+    max-width: 6rem;
+    font-size: 1rem;
+    border-radius: 4px;
 }
 
 .Star-div {
