--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   background-image: linear-gradient(to right, #002855, rgb(68, 66, 160));
 } */
 
-/* 
+
 .logo-img:hover {
   animation: logo-img-spin 2s linear infinite
 }
@@ -34,11 +34,11 @@
   from {
     transform: rotate(0deg);
     
-  }
+  }to {}
   to {
     transform: rotate(360deg)
   }
-} */
+}
 
 nav {
   background-color: #002855;
@@ -99,6 +99,26 @@ nav button {
     max-width: 6rem;
     font-size: 1rem;
     border-radius: 4px;
+}
+.add-blank-button{
+  color: white;
+    background-color: #007BFF;
+    border: #007BFF;
+    margin:5px;
+    min-height: 2.5rem;
+    min-width: 6rem;
+    max-height: 2rem;
+    max-width: 6rem;
+    font-size: 1rem;
+    border-radius: 4px;
+    
+}
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 20px;
 }
 
 .product-card button:hover {
